--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/iconfinder_com_news" />
+    <!-- Image credits : iconfinder.com -->
 
     <TextView
         style="@style/Base.TextAppearance.AppCompat.Headline"
