--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -6,7 +6,7 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="96dp"
+        android:layout_height="128dp"
         android:layout_gravity="center_horizontal" />
 
     <ImageView
@@ -17,12 +17,12 @@
     <!-- Image credits : iconfinder.com -->
 
     <TextView
-        style="@style/Base.TextAppearance.AppCompat.Headline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Android News Reader"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="32sp" />
 
     <ProgressBar
         android:id="@+id/main_spinner"
@@ -30,6 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:indeterminate="true" />
+        android:indeterminate="true"
+        android:visibility="gone" />
 
 </LinearLayout>
