--- a/app/src/main/res/layout/news_list_adapter.xml
+++ b/app/src/main/res/layout/news_list_adapter.xml
@@ -17,9 +17,22 @@
         android:src="@mipmap/ic_launcher" />
 
     <TextView
+        android:id="@+id/news_date"
+        android:layout_width="fill_parent"
+        android:layout_height="14dip"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@id/news_thumbnail"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:text="Description"
+        android:textSize="12sp" />
+
+    <TextView
         android:id="@+id/news_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/news_date"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
